2010-04-24  Per Bothner  <per@bothner.com>

	* kawa.texi (HTTP requests): Add lots more documentation for
	new and old functions in HTTP.scm.
	(Servlets): Add some more documentation for functions in servlets.scm.

	* kawa.texi (Extended formals): Use boldface for literal syntax.

2010-04-10  Per Bothner  <per@bothner.com>

	* kawa.texi (Binary distribution, Source distribution): Update
	since sources now default to Java 6.

	* kawa.texi (Hash tables): Note that Kawa hashtables implement
	java.util.Map.

	* kawa.texi (Paths): Add some examples.

2010-04-02  Per Bothner  <per@bothner.com>

	* kawa.texi (Hash tables): Also document R6RS hash tables.
	Mostly merged in text from the R6RS specification.

2009-12-22  Per Bothner  <per@bothner.com>

	* tutorial.xml:  Start of a tutorial.

2009-12-13  Per Bothner  <per@bothner.com>

	* kawa.texi (FAQs): New chapter node for Frequenlt Asked Questions.
	Start by discussing define-alias used like Java import.

2009-11-01  Per Bothner  <per@bothner.com>

	* kawa.texi (Module classes, Compilation options): Update since
	--module-static is now the default.
	* kawa.text (Defining new classes): Update that the access: specifier
	now supports 'volatile, 'transient, or a list.
	Also fix think for interface:.

2009-09-29  Per Bothner  <per@bothner.com>

	* kawa.texi (Debugging): Document 'disassemble' function.

2009-09-26  Per Bothner  <per@bothner.com>

	* kawa.texi (Application compilation): Note that the default
	when --main is specified is that no bindings are exported.

2009-09-20  Per Bothner  <per@bothner.com>

	* kawa.texi: Change @defun (and @deffn Function) to @deffn Procedure,
	to match R6RS terminology.

	* kawa.texi (Arithmetic operations): New (unfinished) node,
	mostly based on R6RS.

2009-09-18  Per Bothner  <per@bothner.com>

	* kawa.texi (Implemented SRFIs): Update list.

2009-09-15  Per Bothner  <per@bothner.com>

	* kawa.texi (Miscellaneous): Move command-line-arguments, exit ...
	(Processes):  ... here.